force-app/main/default/objects/Portal_Document_Category__c/Portal_Document_Category__c.object-meta.xml
<CustomObject>
    <label>Portal Document Category</label>
    <nameField>
        <label>Portal Document Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Document Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>