force-app/main/default/objects/Portal_Document_Category__c/fields/Display_As_Gallery__c.field-meta.xml
<CustomField>
    <fullName>Display_As_Gallery__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If this is the lowest level category at which documents are assigned, check to display as image gallery if category is for product images</inlineHelpText>
    <label>Display As Gallery</label>
    <type>Checkbox</type>
</CustomField>