force-app/main/default/objects/Portal_Document_Category__c/fields/Display_as_Table__c.field-meta.xml
<CustomField>
    <fullName>Display_as_Table__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether or not the category will lead to a table</description>
    <label>Display as Table</label>
    <type>Checkbox</type>
</CustomField>