force-app/main/default/objects/Portal_Document_Category__c/fields/Header_Labels__c.field-meta.xml
<CustomField>
    <fullName>Header_Labels__c</fullName>
    <description>Separate entries by comma to be properly processed in the page</description>
    <label>Header Labels</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>