force-app/main/default/objects/Portal_Document_Category__c/fields/Parent_Category__c.field-meta.xml
<CustomField>
    <fullName>Parent_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Parent Portal Document Category</description>
    <label>Parent Category</label>
    <referenceTo>Portal_Document_Category__c</referenceTo>
    <relationshipLabel>Portal Document Categories</relationshipLabel>
    <relationshipName>Portal_Document_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>