force-app/main/default/objects/Portal_Document_Category__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Parent_Category__c</field>
        <operation>equals</operation>
    </filters>
    <label>All</label>
</ListView>